detail-search page is completed(search);prepare develop music-player page

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -37,6 +37,13 @@
           "name": "detail-search",
           "pathName": "pages/detail-search/index",
           "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "music-player",
+          "pathName": "pages/music-player/index",
+          "query": "id=1901371647",
           "scene": null,
           "launchMode": "default"
         }
