music-player page view is completed

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -44,8 +44,8 @@
           "name": "music-player",
           "pathName": "pages/music-player/index",
           "query": "id=1901371647",
-          "scene": null,
-          "launchMode": "default"
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
