--- a/project.private.config.json
+++ b/project.private.config.json
@@ -43,7 +43,7 @@
         {
           "name": "music-player",
           "pathName": "pages/music-player/index",
-          "query": "id=1901371647,1451720450",
+          "query": "id=1901371647",
           "scene": null,
           "launchMode": "default"
         }
