The XXMusic is completed,It can still be played when miniprogram in the background.

--- a/app.json
+++ b/app.json
@@ -31,5 +31,6 @@
   },
   "style": "v2",
   "lazyCodeLoading": "requiredComponents",
+  "requiredBackgroundModes": ["audio"],
   "sitemapLocation": "sitemap.json"
 }
